font size reduction and spacing fixes for usp list

--- a/src/scss/components/lists.scss
+++ b/src/scss/components/lists.scss
@@ -23,16 +23,18 @@
         padding-left: 0;
         display: flex;
         flex-wrap: wrap;
-        
     
         .list-item {
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
-            width: calc(100% / 2);
+            width: 100%;
+            padding: 0 1rem;
 
             .item-desc {
+                @include font-size(14px);
+
                 ul, ol {
                     padding-left: 0;
                 }
@@ -40,20 +42,17 @@
         }
     
         @include media-breakpoint-up (md) {
-            margin: 0 -2rem;
-    
-            .list-item {
-                width: calc(100% / 3);
-                padding: 0 2rem;
-            }
-        }
-    
-        @include media-breakpoint-up (lg) {
             margin: 0 -3rem;
     
             .list-item {
-                width: calc(100% / 4);
+                width: calc(100% / 3);
                 padding: 0 3rem;
+            }
+        }
+    
+        @include media-breakpoint-up (lg) {   
+            .list-item {
+                width: calc(100% / 4);
             }
         }
     }
